Bug 168341 - Writer markdown export: image links are not handled
Summary: Writer markdown export: image links are not handled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Markdown
  Show dependency treegraph
 
Reported: 2025-09-10 09:09 UTC by Miklos Vajna
Modified: 2025-09-12 06:55 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (56 bytes, text/markdown)
2025-09-10 09:09 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2025-09-10 09:09:14 UTC
Created attachment 202768 [details]
Minimal reproducer

1. Open the attached file in a directory which has a mytest.png in it, next to the file.
2. Check the link of the image (e.g. ctrl-click on it.)

Actual result: the image has no link.

Expected result: the image has a link, as specified in the file.

This is missing both on the import and export side.
Comment 1 Commit Notification 2025-09-12 06:53:00 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b7bc0e5f3999950d6b5f0d2bdcda2c6cc2f04e61

tdf#168341 sw markdown filter: handle links on images

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.